@@ -156,7 +156,7 @@ fi
 
 # for THIS particular version of the source package
 version=${override_version:-@version@}
-upstream=${version%-*}
+upstream=${override_upstream:-@upstream@}
 revision=${version#*-}
 
 home=${home:-/usr/src/kernel-patches/all/$upstream/debian}
