@@ -135,7 +135,7 @@ $(STAMPS_DIR)/source: debian/bin/apply
 	rm -rf $(DIR)
 	mkdir -p $(DIR)
 	cp -al $(srcfiles) $(DIR)
-	cd $(DIR); override_version=$(SOURCE_VERSION) home=$(CURDIR)/debian/patches-debian sh $(CURDIR)/debian/bin/apply
+	cd $(DIR); override_version=$(SOURCE_VERSION) override_upstream=$(PARENT_AND_UPSTREAM_VERSION) home=$(CURDIR)/debian/patches-debian sh $(CURDIR)/debian/bin/apply
 	#make-kpkg does this when building kernel-source.
 	mv $(DIR)/scripts/package/Makefile $(DIR)/scripts/package/Makefile.dist
 	mv $(DIR)/scripts/package/builddeb $(DIR)/scripts/package/builddeb.dist
@@ -267,8 +267,10 @@ install-patch:
 	dh_installdirs $(DH_OPTIONS) $(pbase)/apply $(pbase)/debian $(pbase)/unpatch
 	dh_install $(DH_OPTIONS) debian/patches-debian/* $(pbase)/debian
 #	Install the debian patches
-	sed 's/@version@/$(release)/g' debian/bin/apply > $(pfull)/apply/debian
-	sed 's/@upstream@/$(version)/g' debian/bin/unpatch > $(pfull)/unpatch/debian
+	sed 's/@version@/$(SOURCE_VERSION)/g' debian/bin/apply > $(pfull)/apply/debian
+	sed 's/@upstream@/$(PARENT_AND_UPSTREAM_VERSION)/g' debian/bin/apply > $(pfull)/apply/debian
+	sed 's/@version@/$(UPSTREAM_VERSION)/g' debian/bin/unpatch > $(pfull)/unpatch/debian
+	sed 's/@upstream@/$(PARENT_AND_UPSTREAM_VERSION)/g' debian/bin/unpatch > $(pfull)/apply/debian
 	chmod 755 $(pfull)/apply/debian $(pfull)/unpatch/debian
 	chmod 644 $(pfull)/debian/*.patch
 	bzip2 -9 $(pfull)/debian/*.patch
