@@ -13,7 +13,13 @@ linux-2.6 (2.6.13+2.6.14-rc4-1) UNRELEASED; urgency=low
   * Correct linux-patch-debian description.  It replaces the
     kernel-patch-debian packages, not the kernel-source packages.
 
- -- dann frazier <dannf@debian.org>  Tue, 18 Oct 2005 13:29:06 -0600
+  [ Simon Horman ]
+  * Allow versions of the form 2.6.13+2.6.14-rc4-1 to work,
+    at the expense of -rc4 being part of upstream rather
+    than a modifier that can set the ABI. It was a bit envasive,
+    hopefully it doesn't break anything. 
+
+ -- Simon Horman <horms@debian.org>  Wed, 19 Oct 2005 18:06:19 +0900
 
 linux-2.6 (2.6.13-2) UNRELEASED; urgency=low
 
